<?xml version="1.0" encoding="utf-8" standalone="no"?><!--
/*
* Copyright (C) 2008 The Android Open Source Project
*
* Licensed under the Apache License, Version 2.0 (the "License");
* you may not use this file except in compliance with the License.
* You may obtain a copy of the License at
*
*      http://www.apache.org/licenses/LICENSE-2.0
*
* Unless required by applicable law or agreed to in writing, software
* distributed under the License is distributed on an "AS IS" BASIS,
* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
* See the License for the specific language governing permissions and
* limitations under the License.
*/
-->
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <!-- All string resources shared across all launcher variants shall be put here -->
    <!-- All string resources containing app name ("ME Launcher") shall be put into variant-specific directories (launcher / launcherSP / ...) -->

    <!-- General -->
    <string name="network_error">Network error.</string>

    <!-- BrowsingHistory -->

    <!-- This is used as icon badge text. BE SHORT in translations. [CHAR_LIMIT=4] -->

    <string name="live_wallpaper_loading_text">Downloading…</string>
    <string name="live_wallpaper_loading_percentage" translatable="false">%1$d%%</string>

    <!-- cpu cooler -->

    <string name="congratulations">Congratulations!</string>
    <string name="won_live_wallpaper">You have won a live wallpaper!</string>
    <string name="won_three_d_wallpaper">You have won a 3D wallpaper!</string>
    <string name="more">More</string>
    <string name="preview">Preview</string>

    <!--opening guide-->

    <!-- result page -->

    <string name="result_page_unreadmessage_promote_notification_access_guide_title">Unread messages</string>

    <!-- DO NOT REMOVE the following string, translation in progress. -->

    <!-- DO NOT REMOVE the following strings, translation in progress. -->
    <!-- @changjiang.tan @haoyang.yang -->

    <!-- notification toolbar -->
    <string name="notification_toolbar_wifi_connecting">Connecting</string>

    <!-- wallpaper -->


    <!--recent apps-->

    <string name="wallpaper_share_msg">I have found an amazing wallpaper here: </string>
    <string name="wallpaper_share_3d_image_msg">I have found an amazing 3d wallpaper here: </string>
    <string name="wallpaper_share_live_image_msg">I have found an amazing live wallpaper here: </string>
    <string name="shared_by">Share by</string>

    <!-- Screen Greeting -->

    <!-- Health Tip -->

    <!--action sheet label-->

    <string name="gdpr_alert_title" >Updates on Our Privacy Policy and Terms</string>

    <!-- Five stars overlay -->

    <!-- Feedback overlay -->


    <!--safe box-->
    <!--feature closed, wait for delete @li.fang-->

    <!-- wait for translate @changjiang.tan -->

    <!-- wait for translate @yang.chen -->

    <string name="next">NEXT</string>

    <!-- translate in branch, wait for merge @tian.tian -->

    <!--set as default guide-->

    <!-- wait for translate @shengxin.wang-->

    <!--fall master-->

    <!--lucky draw-->

    <string name="report" >Report</string>
    <string name="cc0_protocol_agree_it" >Yes, I agree with it</string>
    <string name="cc0_protocol_title" >License to Upload Images</string>
    <string name="cc0_protocol_content" >1) You may upload Images and/or Videos to the Library, and %1$s will screen these contents to see if they are suitable for distribution. %2$s does not accept any adult oriented contents. \n2) By uploading Images or Videos to the Library, your works are released under Creative Commons CC0 free to use for almost any purpose, both commercial and non-commercial. \n3) You are solely responsible for the Content you upload. You warrant that you own all proprietary rights regarding the Content, and you are obliged to obtain a non-exclusive, perpetual, irrevocable, worldwide, and royalty-free Model and/or Property Release, and/or any other permission necessary concerning the use of this work for any purpose, without any conditions, unless such conditions are required by law. \n4) Furthermore, you acknowledge that %3$s does not allow the upload of any Images or Videos that infringe on any copyright, property right, trademark, or any other applicable right. \n5) You accept that even though we do our best to prevent it from happening, %4$s cannot be held responsible for the misuse or abuse of any Content. \n6) We also reserve the right to remove any Content at any time if we believe it\'s defective, of poor quality, or in violation of these Terms.</string>
    <string name="customize_report_reason_infringement" >This wallpaper has infringement</string>
    <string name="customize_report_reason_porn" >This wallpaper involves porn</string>
    <string name="customize_report_reason_gambling" >This wallpaper involves gambling</string>
    <string name="customize_report_reason_political" >This wallpaper involves political rumors</string>
    <string name="customize_report_reason_violence" >This wallpaper involves violent bloody</string>
    <string name="customize_report_page_title" >Please select the reason you want to report</string>
    <string name="customize_input_email_hint" >Email</string>
    <string name="customize_input_email_title" >In order to contact you in the future, please provide your email address.</string>
    <string name="customize_input_incorrect_email" >Please fill in the right email address</string>
    <string name="customize_report_succeed" >We have received your report and we fill handle it carefully.</string>

    <!--notification channel-->

    <string name="permission_request_unread_message" >Unread Message</string>
    <string name="permission_request_failed_message">Failed to grant access</string>
    <string name="permission_request_succeed_message">%1$s available</string>
    <string name="normal_permission_guide_permission">Permissions</string>
    <string name="floating_window_permission_guide_dialog_content">Allow the permission to display the incoming call over other apps.</string>
    <string name="permission_request_call">Call</string>
    <string name="permission_request_contacts">Contacts</string>

    <string name="normal_permission_guide_dialog_content">Select "Permissions" and activate \n"Phone", "Contacts"</string>

    <!-- Call Assistant-->

    <!-- Battery OPTIMIZED-->
    <string name="launcher_settings_update">Update</string>

    <string name="privacy_policy_settings_title">Privacy policy</string>

    <string name="terms_of_service_settings_title">Terms of service</string>

    <string name="update_toast_no_network">Please check connection</string>

    <string name="update_toast_already_latest">You are using the latest version</string>

    <string name="update_dialog_title">Download Latest Version</string>

    <string name="online_wallpaper_edit_cancel_btn">CANCEL</string>

    <string name="download_capital">DOWNLOAD</string>
    <string name="online_wallpaper_apply_btn">设置为壁纸</string>


</resources>
